<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="131dp"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/z"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/ztextview"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:text="@string/zzzz"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6" />

    <TextView
        android:id="@+id/xtextview"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:text="@string/xxxx"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="131dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="395dp"
            android:layout_height="100dp"
            android:text="@string/shake_to_get_a_toast_and_to_switch_color"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="131dp"
        android:layout_height="38dp"
        android:text="@string/y"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/ytextview"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/yyyy"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>

